<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >


    <Button
        android:layout_marginTop="140dp"
        android:id="@+id/btn_addArtist"
        android:layout_width="match_parent"
        android:textAllCaps="false"
        android:layout_height="wrap_content"
        android:text="@string/add_artist" />

    <Button
        android:layout_marginTop="40dp"
        android:id="@+id/btn_add_photograph"
        android:layout_width="match_parent"
        android:textAllCaps="false"
        android:layout_height="wrap_content"
        android:text="@string/add_photograph" />

    <Button
        android:layout_marginTop="40dp"
        android:id="@+id/btn_delete_artist"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_artist_photograph" />

    <Button
        android:layout_marginTop="40dp"
        android:id="@+id/btn_view_photograph"
        android:layout_width="match_parent"
        android:textAllCaps="false"
        android:layout_height="wrap_content"
        android:text="@string/view_photograph_list" />
</LinearLayout>