<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddPhographActivity">

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photo_name" />

        <EditText
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:id="@+id/txt_photo_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/photo_name" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artist_name" />

        <Spinner
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:id="@+id/txt_artist_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/photo_category1" />

        <Spinner
            android:id="@+id/txt_photo_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"/>
    </LinearLayout>
    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/photograph"/>

    <ImageView
        android:id="@+id/img_photograph"
        android:layout_width="match_parent"
        android:src="@mipmap/ic_launcher"
        android:layout_height="212dp"
        android:layout_marginTop="20dp" />
    <Button
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:id="@+id/button_add"
        android:layout_width="match_parent"
        android:text="@string/add_photograph"
        android:textAllCaps="false"
        android:layout_height="wrap_content"/>
</LinearLayout>